--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-4">
       <div class="container">
         <a class="navbar-brand" href="{% url 'index' %}">
-          <img src="{% static 'logo.png' %}" height="40px" />
+          <img src="{% static 'logo.jpg' %}" height="40px" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar"
           aria-expanded="false" aria-label="Toggle navigation">
