--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="">API Documentation</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/media">API Documentation</a>
+              <a class="nav-link" href="{% url 'app:media-list' %}">Media</a>
             </li>
           </ul>
           <ul class="navbar-nav">
