--- a/templates/media/detail.html
+++ b/templates/media/detail.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="container mt-5 mb-5 pt-5 pb-5">
+    <div class="row col-sm-12 mt-3 mb-5">
+        <a href="{% url 'app:meta-field-add' media_uuid %}" class="btn btn-success main-font"><i
+                class="fas fa-plus-square"></i> add field</a>
+    </div>
     <div class="row col-sm-12">
+
         <table id="example" class="table table-striped table-bordered">
             <thead>
                 <tr>
@@ -17,7 +22,8 @@
                     <th scope="row main-font">{{ field.name }}</th>
                     <td class="main-font">{{ field.value }}</td>
                     <td class="main-font">
-                        <a href="#" class="btn btn-outline-primary main-font"><i class="fas fa-edit"></i></a>
+                        <a href="{% url 'app:meta-field-edit' media_uuid field.pk %}"
+                            class="btn btn-outline-primary main-font"><i class="fas fa-edit"></i></a>
                         <a href="{% url 'app:meta-field-delete' media_uuid field.pk %}"
                             class="btn btn-outline-danger main-font"><i class="fas fa-trash"></i></a>
                     </td>
