--- a/templates/media/detail.html
+++ b/templates/media/detail.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row col-sm-12">
 
-        <table id="example" class="table table-striped table-bordered">
+        <table id="dataTable" class="table table-striped table-bordered">
             <thead>
                 <tr>
                     <th scope="col">Field</th>
@@ -35,7 +35,7 @@
 </div>
 <script>
     $(document).ready(function () {
-        $('#example').DataTable();
+        $('#dataTable').DataTable();
     });
 </script>
 {% endblock content %}
